--- a/WpfSample/WpfSample.csproj
+++ b/WpfSample/WpfSample.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\WpfTest\PackUriSample.Module\PackUriSample.Module.csproj" />
+  </ItemGroup>
 </Project>
